Fix: Vertical scrollbar missing on thumbnail gallery preview

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,3 @@
 
 @import '~@fortawesome/fontawesome-free/scss/fontawesome';
 @import '~@fortawesome/fontawesome-free/scss/solid';
-
-body {
-  overflow: hidden;
-}
